--- a/Coinbase/index.html
+++ b/Coinbase/index.html
@@ -190,7 +190,8 @@
         <option value="English">Hindi</option>
       </select>
       <p class="mb-0 text-dark">2023 Coinbase</p>
-      <p class="text-dark">Blog - Twitter - Facebook</p>
+      <p class="text-dark">Blog  Twitter Facebook</p>
+      <a class="text-dark" href="https://github.com/Ankvat/WebDev-TechEWorkshop.git">Coded by Ankvat❤️🔱</a>
     </div>
   </div>
   <div>
@@ -208,10 +209,10 @@
     <div class="col-lg-2 ms-auto">
       <h5 class="mb-3 mb-lg-5 text-dark">Company</h5>
       <ul class="ps-0">
-        <li><a href="#">About</a></li>
-        <li><a href="#">Affiliates</a></li>
-        <li><a href="#">Careers</a></li>
-        <li><a href="#">About</a></li>
+        <li><a href="#">Hiring</a></li>
+        <li><a href="#">Locations</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">History</a></li>
       </ul>
     </div>
   </div>
@@ -219,10 +220,10 @@
     <div class="col-lg-2 ms-auto">
       <h5 class="mb-3 mb-lg-5 text-dark">Company</h5>
       <ul class="ps-0">
-        <li><a href="#">About</a></li>
-        <li><a href="#">Affiliates</a></li>
-        <li><a href="#">Careers</a></li>
-        <li><a href="#">About</a></li>
+        <li><a href="#">C Suite</a></li>
+        <li><a href="#">Management</a></li>
+        <li><a href="#">DevOps</a></li>
+        <li><a href="#">Divisions</a></li>
       </ul>
     </div>
   </div>
