--- a/Coinbase/index.html
+++ b/Coinbase/index.html
@@ -191,7 +191,7 @@
       </select>
       <p class="mb-0 text-dark">2023 Coinbase</p>
       <p class="text-dark">Blog  Twitter Facebook</p>
-      <a class="text-dark" href="https://github.com/Ankvat/WebDev-TechEWorkshop.git">Coded by Ankvat❤️🔱</a>
+      <a href="https://github.com/Ankvat/WebDev-TechEWorkshop.git">Coded by Ankvat</a>
     </div>
   </div>
   <div>
@@ -207,7 +207,7 @@
   </div>
   <div>
     <div class="col-lg-2 ms-auto">
-      <h5 class="mb-3 mb-lg-5 text-dark">Company</h5>
+      <h5 class="mb-3 mb-lg-5 text-dark">Oppurtunities</h5>
       <ul class="ps-0">
         <li><a href="#">Hiring</a></li>
         <li><a href="#">Locations</a></li>
@@ -218,9 +218,9 @@
   </div>
   <div>
     <div class="col-lg-2 ms-auto">
-      <h5 class="mb-3 mb-lg-5 text-dark">Company</h5>
+      <h5 class="mb-3 mb-lg-5 text-dark">Deployments</h5>
       <ul class="ps-0">
-        <li><a href="#">C Suite</a></li>
+        <li><a href="#">CSuite</a></li>
         <li><a href="#">Management</a></li>
         <li><a href="#">DevOps</a></li>
         <li><a href="#">Divisions</a></li>
